# sysmon

app/: CMakeLists.txt  load.cpp  load.h  main.cpp  sysmon.qml  sysmon.qrc
conf.d/cmake/: config.cmake
conf.d/wgt/: config.xml.in
